--- a/public/styles/main2.css
+++ b/public/styles/main2.css
@@ -63,7 +63,8 @@
     top: 1460px;
     left: 2%;
     z-index: 1;
-    box-shadow: 0px 8px 11px #2ECCFA;
+    -webkit-box-shadow: 0px 8px 11px #2ECCFA;
+            box-shadow: 0px 8px 11px #2ECCFA;
   }
   .first, .second, .third {
     position: relative;
@@ -176,7 +177,8 @@
     top: 1585px;
     left: 2%;
     z-index: 1;
-    box-shadow: 0px 8px 11px #2ECCFA;
+    -webkit-box-shadow: 0px 8px 11px #2ECCFA;
+            box-shadow: 0px 8px 11px #2ECCFA;
   }
   .first, .second, .third {
     position: relative;
@@ -282,7 +284,8 @@
     top: 1471px;
     left: 5%;
     z-index: 1;
-    box-shadow: 0px 8px 11px #2ECCFA;
+    -webkit-box-shadow: 0px 8px 11px #2ECCFA;
+            box-shadow: 0px 8px 11px #2ECCFA;
   }
   .first, .second, .third {
     position: relative;
