--- a/public/styles/mini.css
+++ b/public/styles/mini.css
@@ -172,25 +172,40 @@
 }
 
 @media (min-width: 320px) and (max-width: 1000px) {
-    .wrap_desc {
-      grid-template-columns: 1fr;
-      grid-template-rows: repeat(4, 1fr);
-      width: 77%;
-      left: 10%;
-      height: 1200px;
-    }
-    .comm {
-      width: 100%;
-    }
-    .can {
-      top: -88px;
-      height: 136px;
-    }
-    .desc {
-      top: -95px;
-      height: 236px;
-      box-shadow: 5px -2px 10px #00d2ff;
-    }
+  .wrap_desc {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+    -ms-grid-rows: (1fr)[4];
+    grid-template-rows: repeat(4, 1fr);
+    width: 77%;
+    left: 10%;
+    height: 1200px;
+  }    .wrap_desc > *:nth-child(1) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+  }    .wrap_desc > *:nth-child(2) {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+  }    .wrap_desc > *:nth-child(3) {
+    -ms-grid-row: 3;
+    -ms-grid-column: 1;
+  }    .wrap_desc > *:nth-child(4) {
+    -ms-grid-row: 4;
+    -ms-grid-column: 1;
+  }
+  .comm {
+    width: 100%;
+  }
+  .can {
+    top: -88px;
+    height: 136px;
+  }
+  .desc {
+    top: -95px;
+    height: 236px;
+    -webkit-box-shadow: 5px -2px 10px #00d2ff;
+            box-shadow: 5px -2px 10px #00d2ff;
+  }
     .comm.try, .comm.desc {
       left: -14px;
       font-size: 14px;
