--- a/public/styles/mobile.css
+++ b/public/styles/mobile.css
@@ -93,7 +93,9 @@
     top: 50px;
   }
   #rocky {
-    transform: rotate(-25deg);
+    -webkit-transform: rotate(-25deg);
+        -ms-transform: rotate(-25deg);
+            transform: rotate(-25deg);
     width: 124px;
     position: relative;
     top: -100px;
@@ -114,10 +116,14 @@
     top: 53px;
   }
   #mail2 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
     grid-column: 1 / 2;
     top: -40px;
   }
   #text {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
     grid-column: 1 / 3;
     height: 100px;
     top: -65px;
