--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -37,6 +37,8 @@
     font-size: 13px;
   }
   .dir_4, #telephone_2 {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 2;
     grid-column: 2 / 4;
   }
   #loc {
@@ -92,7 +94,11 @@
   }
   #but_2 {
     position: relative;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
     grid-column: 1 / 4;
+    -ms-grid-row: 5;
+    -ms-grid-row-span: 1;
     grid-row: 5 / 6;
     top: 22px;
     width: 89%;
@@ -111,7 +117,8 @@
     position: relative;
     left: -32%;
     height: 450px;
-    box-shadow: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
     top: 274px;
   }
   #cup {
@@ -124,7 +131,8 @@
     height: 50px;
     top: 100px;
     background-color: #00d2ff;
-    box-shadow: 0 0 10px;
+    -webkit-box-shadow: 0 0 10px;
+            box-shadow: 0 0 10px;
     font-size: 20px;
     z-index: 1000;
   }
@@ -162,7 +170,8 @@
     left: -223px;
     top: 765px;
     max-width: 600px;
-    box-shadow: 0 0 20px white;
+    -webkit-box-shadow: 0 0 20px white;
+            box-shadow: 0 0 20px white;
     border-radius: 0;
     padding-left: 9px;
     padding-top: 9px;
@@ -285,6 +294,8 @@
     font-size: 13px;
   }
   .dir_4, #telephone_2 {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 2;
     grid-column: 2 / 4;
   }
   #loc {
@@ -340,7 +351,11 @@
   }
   #but_2 {
     position: relative;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
     grid-column: 1 / 4;
+    -ms-grid-row: 5;
+    -ms-grid-row-span: 1;
     grid-row: 5 / 6;
     top: 22px;
     width: 89%;
@@ -359,7 +374,8 @@
     position: relative;
     left: -32%;
     height: 450px;
-    box-shadow: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
     top: 360px;
   }
   #cup {
@@ -372,7 +388,8 @@
     height: 50px;
     top: 43px;
     background-color: #00d2ff;
-    box-shadow: 0 0 10px;
+    -webkit-box-shadow: 0 0 10px;
+            box-shadow: 0 0 10px;
     font-size: 20px;
     z-index: 1000;
   }
@@ -410,11 +427,14 @@
     left: 0;
     top: 178px;
     max-width: 600px;
-    box-shadow: 0 0 20px white;
+    -webkit-box-shadow: 0 0 20px white;
+            box-shadow: 0 0 20px white;
     border-radius: 0;
     padding-left: 9px;
     padding-top: 9px;
     padding-bottom: 0px;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
     grid-column: 1 / 2;
   }
   .wrap_part2 {
@@ -536,6 +556,8 @@
     font-size: 13px;
   }
   .dir_4, #telephone_2 {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 2;
     grid-column: 2 / 4;
   }
   #loc {
@@ -591,7 +613,11 @@
   }
   #but_2 {
     position: relative;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
     grid-column: 1 / 4;
+    -ms-grid-row: 5;
+    -ms-grid-row-span: 1;
     grid-row: 5 / 6;
     top: 22px;
     width: 89%;
@@ -610,7 +636,8 @@
     position: relative;
     left: -32%;
     height: 450px;
-    box-shadow: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
     top: 274px;
   }
   #cup {
@@ -623,7 +650,8 @@
     height: 50px;
     top: 100px;
     background-color: #00d2ff;
-    box-shadow: 0 0 10px;
+    -webkit-box-shadow: 0 0 10px;
+            box-shadow: 0 0 10px;
     font-size: 20px;
     z-index: 1000;
   }
@@ -663,11 +691,14 @@
     top: 80px;
     left: 0;
     max-width: 600px;
-    box-shadow: 0 0 20px white;
+    -webkit-box-shadow: 0 0 20px white;
+            box-shadow: 0 0 20px white;
     border-radius: 0;
     padding-left: 9px;
     padding-top: 9px;
     padding-bottom: 0px;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
     grid-column: 1 / 2;
   }
   .wrap_part2 {
