--- a/public/styles/style2.css
+++ b/public/styles/style2.css
@@ -20,9 +20,22 @@ body {
 .hello {
   position: relative;
   width: 100%;
-  box-shadow: -4px 4px 10px white;
+  -webkit-box-shadow: -4px 4px 10px white;
+          box-shadow: -4px 4px 10px white;
   border: none;
   background-color: #3a7bd5;
+  color: white;
+}
+.hello::-webkit-input-placeholder {
+  color: white;
+}
+.hello::-moz-placeholder {
+  color: white;
+}
+.hello:-ms-input-placeholder {
+  color: white;
+}
+.hello::-ms-input-placeholder {
   color: white;
 }
 .hello::placeholder {
@@ -34,7 +47,9 @@ body {
   width: 70px;
   height: 100vh;
   background-color: #1E3657;
+  display: -ms-grid;
   display: grid;
+  -ms-grid-rows: 100px 100px 100px 1fr;
   grid-template-rows: 100px 100px 100px 1fr;
   cursor: default;
   z-index: 1000;
@@ -50,10 +65,14 @@ body {
   position: relative;
   width: 35%;
   top: 30px;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
   transition: 0.2s;
 }
 .home:hover {
-  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+          transform: scale(1.1);
   opacity: 1;
 }
 
@@ -61,21 +80,29 @@ body {
   position: relative;
   width: 45%;
   top: 30px;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
   transition: 0.2s;
   left: 27% !important;
 }
 .menu:hover {
-  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+          transform: scale(1.1);
   opacity: 1;
 }
 .question {
   position: relative;
   width: 50%;
   top: 30px;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
   transition: 0.2s;
 }
 .question:hover {
-  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+          transform: scale(1.1);
   opacity: 1;
 }
 .our {
@@ -97,6 +124,8 @@ body {
   top: 50px;
   opacity: 0.1;
   height: 100%;
+  -webkit-transition: 1s;
+  -o-transition: 1s;
   transition: 1s;
 }
 .load {
@@ -119,6 +148,7 @@ body {
 }
 .start {
       position: relative;
+      display: -ms-grid;
       display: grid;
       height: 150px;
       color: #FAFAFA;
@@ -127,46 +157,80 @@ body {
       left: 47%;
       top: 150px;
       font-family: 'Circe Regular';
+      -ms-grid-columns: 1fr;
       grid-template-columns: 1fr;
+      -ms-grid-rows: 1fr 1fr;
       grid-template-rows: 1fr 1fr;
+}.start > *:nth-child(1) {
+      -ms-grid-row: 1;
+      -ms-grid-column: 1;
+}.start > *:nth-child(2) {
+      -ms-grid-row: 2;
+      -ms-grid-column: 1;
 }
 .started {
   color: #1c1c1c;
   position: relative;
+  display: -ms-grid;
   display: grid;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   height: 60px;
   font-size: 17px;
   border-radius: 30px;
   width: 242px;
   cursor: pointer;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
   transition: 0.2s;
   background-color: #DFF5FC;
   letter-spacing: 1px;
   z-index: 10;
-  animation: spaceX 2s linear infinite;
+  -webkit-animation: spaceX 2s linear infinite;
+          animation: spaceX 2s linear infinite;
+}
+@-webkit-keyframes spaceX {
+  0% { -webkit-transform: scale(1); transform: scale(1); }
+  50% { -webkit-transform: scale(1.07); transform: scale(1.07); }
+  100% { -webkit-transform: scale(1); transform: scale(1); }
 }
 @keyframes spaceX {
-  0% { transform: scale(1); }
-  50% { transform: scale(1.07); }
-  100% { transform: scale(1); }
+  0% { -webkit-transform: scale(1); transform: scale(1); }
+  50% { -webkit-transform: scale(1.07); transform: scale(1.07); }
+  100% { -webkit-transform: scale(1); transform: scale(1); }
 }
 #bat {
   position: relative;
   left: 43px;
 }
 .started:hover {
-  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+          transform: scale(1.1);
 }
 .myBody {
   position: relative;
   top: 250px;
   left: 15%;
   width: 83%;
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 20% 75%;
   grid-template-columns: 20% 75%;
+  -ms-grid-rows: 1fr;
   grid-template-rows: 1fr;
+}
+.myBody > *:nth-child(1) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+}
+.myBody > *:nth-child(2) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
 }
 .wrap_im {
   position: relative;
@@ -186,14 +250,37 @@ body {
 }
 .main {
   position: relative;
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 1fr;
   grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
   width: 85%;
   left: 100px;
   top: 71px;
+}.main > *:nth-child(1) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+}.main > *:nth-child(2) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+}.main > *:nth-child(3) {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+}.main > *:nth-child(4) {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+}.main > *:nth-child(5) {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+}.main > *:nth-child(6) {
+  -ms-grid-row: 3;
+  -ms-grid-column: 2;
 }
 #one {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
     grid-column: 1 / 3;
     font-size: 30px;
     position: relative;
@@ -202,22 +289,31 @@ body {
     letter-spacing: 1px;
 }
 #two {
-    box-shadow: 0px 0px 10px #2ECCFA;
+    -webkit-box-shadow: 0px 0px 10px #2ECCFA;
+            box-shadow: 0px 0px 10px #2ECCFA;
 }
 #four {
-    box-shadow: 0px 0px 10px #2ECCFA;
+    -webkit-box-shadow: 0px 0px 10px #2ECCFA;
+            box-shadow: 0px 0px 10px #2ECCFA;
 }
 #five {
-    box-shadow: 0px 0px 10px #2ECCFA;
+    -webkit-box-shadow: 0px 0px 10px #2ECCFA;
+            box-shadow: 0px 0px 10px #2ECCFA;
 }
 #three {
-    box-shadow: 0px 0px 10px #2ECCFA;
+    -webkit-box-shadow: 0px 0px 10px #2ECCFA;
+            box-shadow: 0px 0px 10px #2ECCFA;
 }
 
 .our_1 {
+  display: -ms-grid;
   display: grid;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   padding: 32px;
   font-size: 20px;
   text-align: center;
@@ -227,43 +323,88 @@ body {
 }
 .more {
   position: relative;
+  display: -ms-grid;
   display: grid;
   top: 1260px;
   height: 300px;
   width: 75%;
   max-width: 1054px;
+  -ms-grid-columns: 16% 16% 16% 52%;
   grid-template-columns: 16% 16% 16% 52%;
+  -ms-grid-rows: 70px 1fr;
   grid-template-rows: 70px 1fr;
   left: 14%;
   border-radius: 0 20px;
-  box-shadow: 0px 0px 11px #2ECCFA;}
+  -webkit-box-shadow: 0px 0px 11px #2ECCFA;
+          box-shadow: 0px 0px 11px #2ECCFA;}
+.more > *:nth-child(1) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;}
+.more > *:nth-child(2) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;}
+.more > *:nth-child(3) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;}
+.more > *:nth-child(4) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 4;}
+.more > *:nth-child(5) {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;}
+.more > *:nth-child(6) {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;}
+.more > *:nth-child(7) {
+  -ms-grid-row: 2;
+  -ms-grid-column: 3;}
+.more > *:nth-child(8) {
+  -ms-grid-row: 2;
+  -ms-grid-column: 4;}
 
 @media (max-width: 1850px) {
+
   .more{
     left: 8%;
   }
 }
 
 #one_5 {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
   grid-column: 1 / 4;
 }
 
 #one_6 {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
   grid-column: 1 / 4;
 }
 #one_7 {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
   grid-column: 1 / 4;
 }
 #one_8 {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 3;
   grid-row: 2 / 5;
 }
+
 .same {
   border: 1px solid #1E3657;
   position: relative;
+  display: -ms-grid;
   display: grid;
   position: relative;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition: 0.1s;
+  -o-transition: 0.1s;
   transition: 0.1s;
   z-index: -1;
   height: 99%;
@@ -284,6 +425,8 @@ body {
   width: 101%;
   background-color: #1E3657;
   z-index: 10;
+  -webkit-transition: 0.1s;
+  -o-transition: 0.1s;
   transition: 0.1s;
   color: white !important;
   border: none;
@@ -296,8 +439,13 @@ body {
   color: #1c1c1c;
 }
 .wrap_1, .wrap_2, .wrap_3 {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
   grid-column: 1 / 4;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 2;
   grid-row: 2 / 4;
   font-size: 25px;
   width: 100%;
