--- a/public/styles/style5.css
+++ b/public/styles/style5.css
@@ -1,10 +1,25 @@
 .wrap_desc {
   position: relative;
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 1fr;
   grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   width: 90%;
   left: 10%;
+}.wrap_desc > *:nth-child(1) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+}.wrap_desc > *:nth-child(2) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+}.wrap_desc > *:nth-child(3) {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+}.wrap_desc > *:nth-child(4) {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
 }
 .comm {
   width: 50%;
@@ -13,6 +28,8 @@
   color: #00d2ff;
   font-size: 20px;
   font-weight:400;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
   grid-column: 1 / 3;
 }
 #done {
@@ -23,9 +40,12 @@
 .vict {
   position: relative;
   top: -80px;
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 50px 1fr;
   grid-template-columns: 50px 1fr;
-  box-shadow: 4px -4px 10px #00d2ff;
+  -webkit-box-shadow: 4px -4px 10px #00d2ff;
+          box-shadow: 4px -4px 10px #00d2ff;
   border-radius: 20px 20px 20px 0;
   padding: 20px;
 }
@@ -34,7 +54,8 @@
       height: 200px;
       padding: 20px;
       text-align: center;
-      box-shadow: -4px -4px 10px #00d2ff;
+      -webkit-box-shadow: -4px -4px 10px #00d2ff;
+              box-shadow: -4px -4px 10px #00d2ff;
       border-radius: 20px 20px 0 20px;
 }
 .comm.try, .comm.desc {
@@ -47,7 +68,8 @@
   height: 100px;
   text-align: center;
   padding: 20px;
-  box-shadow: 4px -4px 10px #00d2ff;
+  -webkit-box-shadow: 4px -4px 10px #00d2ff;
+          box-shadow: 4px -4px 10px #00d2ff;
   border-radius: 20px 20px 20px 0;
 }
 .comm.can, .comm.vict {
@@ -104,7 +126,9 @@
 }
 .time_11 {
       position: relative;
+      display: -ms-grid;
       display: grid;
+      -ms-grid-columns: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
       width: 32%;
       float: right;
@@ -124,19 +148,30 @@
   position: relative;
   left: 50px;
   text-align: center;
-  box-shadow: 1px 1px 5px;
+  -webkit-box-shadow: 1px 1px 5px;
+          box-shadow: 1px 1px 5px;
   border-radius: 40px;
   padding: 10px;
   height: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
   transition: 0.2s;
   padding-left: 20px;
   left: 300px;
 }
 #same:hover {
-  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+          transform: scale(1.1);
 }
 .now_time {
   position: relative;
@@ -153,11 +188,15 @@
   left: 200px;
 }
 .now_time:hover {
-  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+          transform: scale(1.1);
 }
 .registration {
   position: relative;
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 1fr;
   grid-template-columns: 1fr 1fr;
   height: 500px;
   top: 25px;
@@ -176,7 +215,25 @@
   top: 60px;
   left: 14%;
   position: relative;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
   grid-column: 1 / 3;
+}
+.field::-webkit-input-placeholder {
+  color: rgb(255, 255, 255, 0.5);
+  font-size: 15px;
+}
+.field::-moz-placeholder {
+  color: rgb(255, 255, 255, 0.5);
+  font-size: 15px;
+}
+.field:-ms-input-placeholder {
+  color: rgb(255, 255, 255, 0.5);
+  font-size: 15px;
+}
+.field::-ms-input-placeholder {
+  color: rgb(255, 255, 255, 0.5);
+  font-size: 15px;
 }
 .field::placeholder {
   color: rgb(255, 255, 255, 0.5);
@@ -201,7 +258,9 @@
   position: absolute;
   left: 2%;
   width: 70%;
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: (1fr)[3];
   grid-template-columns: repeat(3, 1fr);
 }
 .mess {
@@ -210,9 +269,14 @@
   background-color: #DF01A5;
   color: rgb(255, 255, 255, 0.8);
   margin-right: 15px;
+  display: -ms-grid;
   display: grid;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   border-radius: 10px 10px 10px 0px;
 }
 .hey {
@@ -230,16 +294,26 @@
   color: white;
   background-color: #FE2E64;
   border-radius: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   border: 1px solid #1c1c1c;
   font-size: 27px;
 }
 .victorine {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .rapido {
   left: 30%;
@@ -253,6 +327,7 @@
   left: -300px;
 }
 .wrap_appear {
+  background-image: -o-linear-gradient(100deg, #00d2ff, #3a7bd5);
   background-image: linear-gradient(-10deg, #00d2ff, #3a7bd5);
   color: white;
 }
@@ -266,6 +341,8 @@
   position: relative;
   text-decoration: none;
   color: #2EFE2E;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
   transition: 0.2s;
 }
 .regi2:hover {
