--- a/public/styles/style6.css
+++ b/public/styles/style6.css
@@ -16,10 +16,15 @@ body {
   background-color: #3a7bd5;
   border-radius: 10px;
   border: 0.2px solid white;
+  display: -ms-grid;
   display: grid;
 }
 .form_enter {
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   position: relative;
   top: -80px;
@@ -29,9 +34,36 @@ body {
   position: relative;
   top: 60px;
   width: 100%;
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 10% 90%;
   grid-template-columns: 10% 90%;
+  -ms-grid-rows: (1fr)[3];
   grid-template-rows: repeat(3, 1fr);
+}
+.hey1 > *:nth-child(1) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+}
+.hey1 > *:nth-child(2) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+}
+.hey1 > *:nth-child(3) {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+}
+.hey1 > *:nth-child(4) {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+}
+.hey1 > *:nth-child(5) {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+}
+.hey1 > *:nth-child(6) {
+  -ms-grid-row: 3;
+  -ms-grid-column: 2;
 }
 #inp1 {
     position: relative;
@@ -48,7 +80,25 @@ body {
     color: white;
     cursor: pointer;
     font-size: 20px;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
     grid-column: 2 / 3;
+}
+#inp1::-webkit-input-placeholder, #inp2::-webkit-input-placeholder {
+  color: rgb(255, 255, 255, 0.2);
+  font-size: 15px;
+}
+#inp1::-moz-placeholder, #inp2::-moz-placeholder {
+  color: rgb(255, 255, 255, 0.2);
+  font-size: 15px;
+}
+#inp1:-ms-input-placeholder, #inp2:-ms-input-placeholder {
+  color: rgb(255, 255, 255, 0.2);
+  font-size: 15px;
+}
+#inp1::-ms-input-placeholder, #inp2::-ms-input-placeholder {
+  color: rgb(255, 255, 255, 0.2);
+  font-size: 15px;
 }
 #inp1::placeholder, #inp2::placeholder {
   color: rgb(255, 255, 255, 0.2);
@@ -69,27 +119,36 @@ body {
   color: white;
   cursor: pointer;
   font-size: 20px;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
   grid-column: 2 / 3;
 }
 input {
   border-radius: 5px;
 }
 .sub {
+  display: -ms-grid;
   display: grid;
   position: relative;
   top: 55px;
   width: 50%;
   height: 42px;
   left: 25%;
-  justify-content: center;
-  align-items: center;
-  background-image: -webkit-linear-gradient(right, #00d2ff, #3a7bd5);
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-image: -o-linear-gradient(right, #00d2ff, #3a7bd5);
+  background-image: -webkit-gradient(linear, right top, left top, from(#00d2ff), to(#3a7bd5));
   background-image: linear-gradient(to left, #00d2ff, #3a7bd5);
   color: white;
   border-radius: 10px;
   border: none;
   cursor: pointer;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
   grid-column: 1 / 3;
 }
 #selfy {
@@ -118,10 +177,14 @@ input {
   z-index: 1000;
 }
 #letter {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
   grid-row: 1 / 2;
   top: 15px;
 }
 #pass {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
   grid-row: 2 / 3;
   top: 50px;
 }
@@ -145,6 +208,8 @@ input {
 .hrr {
       top: 115px;
       position: relative;
+      background: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0)), color-stop(rgba(255, 255, 255, 0.75)), to(rgba(255, 255, 255, 0)));
+      background: -o-linear-gradient(left, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0));
       background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0));
       height: 1px;
 }
@@ -160,9 +225,15 @@ input {
     width: 200px;
     height: auto;
     padding: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     left: -220px;
     background-color: #DF0101;
 }
@@ -181,21 +252,28 @@ input {
   top: 190px;
 }
 .sub2 {
+  display: -ms-grid;
   display: grid;
   position: relative;
   top: 95px;
   width: 40%;
   height: 42px;
   left: 12%;
-  justify-content: center;
-  align-items: center;
-  background-image: -webkit-linear-gradient(right, #00d2ff, #3a7bd5);
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-image: -o-linear-gradient(right, #00d2ff, #3a7bd5);
+  background-image: -webkit-gradient(linear, right top, left top, from(#00d2ff), to(#3a7bd5));
   background-image: linear-gradient(to left, #00d2ff, #3a7bd5);
   color: white;
   border-radius: 10px;
   border: none;
   cursor: pointer;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
   grid-column: 1 / 3;
   font-size: 19px;
   letter-spacing: 1px;
@@ -211,6 +289,8 @@ input {
 }
 .agree {
   left: 20%;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
   grid-column: 2 / 3;
   color: white;
   width: 300px;
@@ -228,12 +308,18 @@ input {
   width: 250px;
   left: 75%;
   top: 550px;
-  animation: launch 4s ease 1;
+  -webkit-animation: launch 4s ease 1;
+          animation: launch 4s ease 1;
 }
 .launch > img, .launch_empty > img {
   width: 100%;
 }
 
+@-webkit-keyframes launch {
+  0% { top: 550px; }
+  50% { top: 200px; }
+  100% { top: -300px; }
+}
 @keyframes launch {
   0% { top: 550px; }
   50% { top: 200px; }
@@ -242,17 +328,27 @@ input {
 .suc {
   position: absolute;
   width: 70%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   top: 50px;
   height: 40px;
   color: white;
   border-radius: 0px 20px 20px 0px;
+  background-image: -webkit-gradient(linear, left top, right top, from(#00d2ff), to(#3a7bd5));
+  background-image: -o-linear-gradient(left, #00d2ff, #3a7bd5);
   background-image: linear-gradient(to right, #00d2ff, #3a7bd5);
 }
 .crypto_wrap {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: (1fr)[4];
     grid-template-columns: repeat(4, 1fr);
     position: relative;
     top: 170px;
@@ -264,6 +360,8 @@ input {
   top: 15px;
   color: white;
   left: 21%;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
   grid-column: 2 / 4;
 }
 .think2 {
@@ -271,6 +369,8 @@ input {
     position: absolute;
     top: 18px;
     left: 117px;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
     grid-column: 1 / 2;
 }
 #ink2 {
@@ -282,6 +382,8 @@ input {
   width: 80px;
   opacity: 0.8;
   left: 41%;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
   grid-column: 1 / 3;
 }
 .mobile_form {
