--- a/public/styles/style7.css
+++ b/public/styles/style7.css
@@ -1,12 +1,14 @@
 .wrap_profile {
       position: relative;
+      display: -ms-grid;
       display: grid;
       width: 63%;
       height: 400px;
       float: left;
       left: 130px;
       top: 120px;
-      box-shadow: 0 0 20px #00d2;
+      -webkit-box-shadow: 0 0 20px #00d2;
+              box-shadow: 0 0 20px #00d2;
       border-radius: 30px;
       z-index: 10;
       background-color: white;
@@ -16,21 +18,30 @@
   width: 200px;
 }
 .com_data {
+  display: -ms-grid;
   display: grid;
   position: relative;
   top: 11px;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .additional {
   width: 150px;
   height: 40px;
   background-color: #1E3657;
   color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   position: relative;
   left: -5px;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   text-decoration: none;
   border-radius: 20px;
 }
@@ -38,62 +49,131 @@
   position: relative;
   left: 50px;
   width: 20%;
+  display: -ms-grid;
   display: grid;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .log {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .main_2 {
       position: absolute;
       width: 100%;
       top: 240px;
       height: 1000px;
-      background-image: -webkit-linear-gradient(190deg, #00d2ff, #3a7bd5);
       background-image: -o-linear-gradient(190deg, #00d2ff, #3a7bd5);
+      background-image: -o-linear-gradient(170deg, #00d2ff, #3a7bd5);
       background-image: linear-gradient(280deg, #00d2ff, #3a7bd5);
+      display: -ms-grid;
       display: grid;
+      -ms-grid-columns: 30% 40% 30%;
       grid-template-columns: 30% 40% 30%;
 }
 .change_form {
     opacity: 1;
     position: relative;
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: (1fr)[3];
     grid-template-columns: repeat(3, 1fr);
+    -ms-grid-rows: (1fr)[4];
     grid-template-rows: repeat(4, 1fr);
     width: 60%;
     left: 30%;
     height: 150px;
+}.change_form > *:nth-child(1) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+}.change_form > *:nth-child(2) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 2;
+}.change_form > *:nth-child(3) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 3;
+}.change_form > *:nth-child(4) {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+}.change_form > *:nth-child(5) {
+    -ms-grid-row: 2;
+    -ms-grid-column: 2;
+}.change_form > *:nth-child(6) {
+    -ms-grid-row: 2;
+    -ms-grid-column: 3;
+}.change_form > *:nth-child(7) {
+    -ms-grid-row: 3;
+    -ms-grid-column: 1;
+}.change_form > *:nth-child(8) {
+    -ms-grid-row: 3;
+    -ms-grid-column: 2;
+}.change_form > *:nth-child(9) {
+    -ms-grid-row: 3;
+    -ms-grid-column: 3;
+}.change_form > *:nth-child(10) {
+    -ms-grid-row: 4;
+    -ms-grid-column: 1;
+}.change_form > *:nth-child(11) {
+    -ms-grid-row: 4;
+    -ms-grid-column: 2;
+}.change_form > *:nth-child(12) {
+    -ms-grid-row: 4;
+    -ms-grid-column: 3;
 }
 .com_change {
   position: relative;
   margin-right: 50px;
   height: 45px;
-  box-shadow: 0 0 10px grey;
+  -webkit-box-shadow: 0 0 10px grey;
+          box-shadow: 0 0 10px grey;
   border: none;
   cursor: pointer;
 }
 #name_2 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
     grid-column: 1 / 2;
 }
 #lastname_2 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
     grid-column: 1 / 2;
 }
 #email_2 {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
     grid-column: 2 / 3;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
     grid-row: 1 / 2;
 }
 #telephone_2 {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
     grid-column: 2 / 3;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
     grid-row: 3 / 4;
 }
 #city_2 {
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 1;
     grid-column: 3 / 4;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
     grid-row: 1 / 2;
 }
 #but_2 {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
   grid-column: 3 / 4;
+  -ms-grid-row: 4;
+  -ms-grid-row-span: 1;
   grid-row: 4 / 5;
   background-color: #1e3657;
   border: none;
@@ -103,23 +183,43 @@
   border-radius: 10px;
 }
 .dir_1 {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
   grid-column: 1 / 2;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
   grid-row: 2 / 3;
 }
 .dir_2 {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
   grid-column: 1 / 2;
+  -ms-grid-row: 4;
+  -ms-grid-row-span: 1;
   grid-row: 4 / 5;
 }
 .dir_3 {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
   grid-column: 2 / 3;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
   grid-row: 2 / 3;
 }
 .dir_4 {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
   grid-column: 2 / 3;
+  -ms-grid-row: 4;
+  -ms-grid-row-span: 1;
   grid-row: 4 / 5;
 }
 .dir_5 {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
   grid-column: 3 / 4;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
   grid-row: 2 / 3;
 }
 .uniq {
@@ -143,15 +243,22 @@
   z-index: 11;
   left: 44%;
   top: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   background-color: #01DF01;
   color: white;
   height: 50px;
   border-radius: 20px 20px 20px 0px;
   min-width: 340px;
-  box-shadow: 0 0 23px #A9F5BC;
+  -webkit-box-shadow: 0 0 23px #A9F5BC;
+          box-shadow: 0 0 23px #A9F5BC;
 }
 .profile_zone {
   top: 332px;
@@ -159,6 +266,7 @@
   width: 115%;
   border-right: 1px solid white;
   height: 520px;
+  display: -ms-grid;
   display: grid;
   color: white;
   left: 50px;
@@ -166,18 +274,26 @@
 .wrap_full {
       position: absolute;
       top: -5px;
+      display: -ms-grid;
       display: grid;
+      -ms-grid-columns: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
-      justify-self: center;
-      align-self: center;
+      -ms-grid-column-align: center;
+          justify-self: center;
+      -ms-grid-row-align: center;
+          align-self: center;
       color: white;
       border-radius: 20px;
       width: 88%;
       height: 393px;
 }
 .wrap_full22 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
     grid-column: 1 / 4;
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: (1fr)[2];
     grid-template-columns: repeat(2, 1fr);
 }
 .general_info {
@@ -185,10 +301,16 @@
       top: -7px;
       left: 32%;
       width: 60%;
+      display: -ms-grid;
       display: grid;
-      align-items: center;
-      justify-content: center;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
       height: 200px;
+      -ms-grid-columns: (1fr)[2];
       grid-template-columns: repeat(2, 1fr);
 }
 .back {
@@ -205,31 +327,46 @@
       position: relative;
       z-index: 12;
       color: white;
-      /* left: -15px; */
       height: 100px;
+      display: -ms-grid;
       display: grid;
-      justify-content: center;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -ms-grid-column: 1;
+      -ms-grid-column-span: 3;
       grid-column: 1 / 4;
 }
 .raiting {
       position: relative;
       height: 362px;
       top: -486px;
+      display: -ms-grid;
       display: grid;
+      -ms-grid-column: 2;
+      -ms-grid-column-span: 2;
       grid-column: 2 / 4;
-      align-items: center;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
       color: white;
       width: 63%;
       left: -45px;
 }
 .wrap_each {
+      display: -ms-grid;
       display: grid;
+      -ms-grid-columns: 30% 70%;
       grid-template-columns: 30% 70%;
       position: relative;
       left: 32px;
 }
 .sCore {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
   grid-column: 2 / 3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
   grid-row: 1 / 2;
   font-size: 30px;
   position: relative;
@@ -242,14 +379,22 @@
   left: 0px;
 }
 .naLa {
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      align-items: center;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -ms-grid-column: 3;
+      -ms-grid-column-span: 1;
       grid-column: 3 / 4;
       width: 135px;
       position: relative;
 }
 .wrap_rait {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 15% 15% 60%;
   grid-template-columns: 15% 15% 60%;
   width: 76%;
   height: 940px;
@@ -257,34 +402,66 @@
   position: relative;
   background-color: #00c2ff;
   top: -137px;
+  -ms-grid-rows: minmax(40px, auto);
   grid-template-rows: minmax(40px, auto);
   max-width: 600px;
-  box-shadow: 0 0 20px white;
+  -webkit-box-shadow: 0 0 20px white;
+          box-shadow: 0 0 20px white;
   border-radius: 20px;
   padding-left: 20px;
   padding-top: 20px;
   padding-bottom: 20px;
 }
+.wrap_rait > *:nth-child(1) {
+      -ms-grid-row: 1;
+      -ms-grid-column: 1;
+}
+.wrap_rait > *:nth-child(2) {
+      -ms-grid-row: 1;
+      -ms-grid-column: 2;
+}
+.wrap_rait > *:nth-child(3) {
+      -ms-grid-row: 1;
+      -ms-grid-column: 3;
+}
 .wrap_score {
       position: relative;
+      -ms-grid-column: 2;
+      -ms-grid-column-span: 1;
       grid-column: 2 / 3;
+      -ms-grid-row: 1;
+      -ms-grid-row-span: 1;
       grid-row: 1 / 2;
       font-size: 25px;
+      display: -ms-grid;
       display: grid;
-      align-items: center;
-      justify-content: center;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
       left: 65px;
       color: white;
 }
 .wrap_part {
   position: relative;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
   grid-column: 3 / 4;
   color: white;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
   grid-row: 1 / 2;
   font-size: 25px;
+  display: -ms-grid;
   display: grid;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   left: 46px;
 }
 .wrap_f {
@@ -292,49 +469,93 @@
   top: -205px;
 }
 .wrap_full1 {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 20% 80%;
   grid-template-columns: 20% 80%;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
   grid-column: 1 / 2;
 }
 .wrap_scores {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: (1fr)[3];
   grid-template-columns: repeat(3, 1fr);
+  -ms-grid-rows: (1fr)[2];
   grid-template-rows: repeat(2, 1fr);
   position: relative;
   width: 60%;
   position: relative;
   left: 34%;
   height: 450px;
-  box-shadow: 0 0 10px white;
+  -webkit-box-shadow: 0 0 10px white;
+          box-shadow: 0 0 10px white;
   border-radius: 20px;
   top: 350px;
 }
-  #gold1 {
-        grid-column: 1 / 2;
-        grid-row: 1 / 2;
-        width: 30px;
-        position: relative;
-        left: -7px;
-        z-index: 3;
-        top: -3px;
-  }
-  #gold2 {
-        grid-row: 1 / 2;
-        grid-column: 1 / 2;
-        width: 30px;
-        position: relative;
-        z-index: 3;
-        left: 11px;
-        top: -3px;
-  }
+.wrap_scores > *:nth-child(1) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+}
+.wrap_scores > *:nth-child(2) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+}
+.wrap_scores > *:nth-child(3) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
+}
+.wrap_scores > *:nth-child(4) {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+}
+.wrap_scores > *:nth-child(5) {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+}
+.wrap_scores > *:nth-child(6) {
+  -ms-grid-row: 2;
+  -ms-grid-column: 3;
+}
+#gold1 {
+      -ms-grid-column: 1;
+      -ms-grid-column-span: 1;
+      grid-column: 1 / 2;
+      -ms-grid-row: 1;
+      -ms-grid-row-span: 1;
+      grid-row: 1 / 2;
+      width: 30px;
+      position: relative;
+      left: -7px;
+      z-index: 3;
+      top: -3px;
+}
+#gold2 {
+      -ms-grid-row: 1;
+      -ms-grid-row-span: 1;
+      grid-row: 1 / 2;
+      -ms-grid-column: 1;
+      -ms-grid-column-span: 1;
+      grid-column: 1 / 2;
+      width: 30px;
+      position: relative;
+      z-index: 3;
+      left: 11px;
+      top: -3px;
+}
 #gold3 {
-        grid-column: 1 / 2;
-        grid-row: 1 / 2;
-        width: 30px;
-        position: relative;
-        left: -23px;
-        z-index: 1;
-        top: -3px;
+      -ms-grid-column: 1;
+      -ms-grid-column-span: 1;
+      grid-column: 1 / 2;
+      -ms-grid-row: 1;
+      -ms-grid-row-span: 1;
+      grid-row: 1 / 2;
+      width: 30px;
+      position: relative;
+      left: -23px;
+      z-index: 1;
+      top: -3px;
 }
 #my_city {
   position: relative;
@@ -343,13 +564,21 @@
 #my_phone {
       position: relative;
       left: -13px;
+      -ms-grid-column: 2;
+      -ms-grid-column-span: 1;
       grid-column: 2 / 3;
+      -ms-grid-row: 1;
+      -ms-grid-row-span: 1;
       grid-row: 1 / 2;
 }
 #my_coins {
   position: relative;
   left: -10px;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
   grid-column: 2 / 3;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
   grid-row: 2 / 3;
 }
 .info_about {
@@ -369,10 +598,19 @@
     top: -10px;
 }
 .start2 {
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
     grid-row: 2 / 3;
+    display: -ms-grid;
     display: grid;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
     grid-column: 1 / 4;
     width: 50%;
     left: 25%;
@@ -382,24 +620,39 @@
     color: white;
     top: 100px;
     background-color: #1E3657;
-    box-shadow: 0 1px 5px #1e3657;
+    -webkit-box-shadow: 0 1px 5px #1e3657;
+            box-shadow: 0 1px 5px #1e3657;
     cursor: pointer;
     text-decoration: none;
+    -webkit-transition: 0.2s;
+    -o-transition: 0.2s;
     transition: 0.2s;
 }
 .start2:hover {
-  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+          transform: scale(1.1);
 }
 #cup {
     width: 200px;
 }
 .wrap_part2 {
       color: white;
+      -ms-grid-column: 1;
+      -ms-grid-column-span: 3;
       grid-column: 1 / 4;
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
+      -ms-grid-row: 1;
+      -ms-grid-row-span: 1;
       grid-row: 1 / 2;
-      align-items: center;
-      justify-content: center;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
       position: relative;
       left: -20px;
       font-size: 20px;
@@ -411,9 +664,17 @@
  }
 .my_success {
   height: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
   grid-column: 1 / 3;
 }
 .dignity {
@@ -428,9 +689,15 @@
 }
 .log {
   width: 150px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   text-decoration: none;
   position: relative;
   left: -34px;
@@ -439,9 +706,13 @@
   border-radius: 20px;
 }
 .wrap_nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   left: 6% !important;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   background-color: #1e3657;
   position: relative;
   width: 200px;
@@ -452,38 +723,69 @@
 .place {
   position: relative;
   left: 10px;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
   grid-column: 1 / 2;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
   grid-row: 1 / 2;
   font-size: 25px;
+  display: -ms-grid;
   display: grid;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   color: white;
 }
 .place1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: self-start;
-  justify-content: center;
+  -webkit-box-align: self-start;
+      -ms-flex-align: self-start;
+          align-items: self-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   position: relative;
   top: 85px;
   color: gold;
   font-size: 40px;
 }
 .place2 {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
   grid-column: 1 / 2;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   top: 85px;
   color: #A9F5BC;
   font-size: 40px;
   position: relative;
 }
 .place3 {
+      -ms-grid-column: 1;
+      -ms-grid-column-span: 1;
       grid-column: 1 / 2;
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      align-items: flex-end;
-      justify-content: center;
+      -webkit-box-align: end;
+          -ms-flex-align: end;
+              align-items: flex-end;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
       position: relative;
       top: 10px;
       top: 82px;
@@ -491,20 +793,36 @@
       font-size: 40px;
 }
 .place4 {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
   grid-column: 1 / 2;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   position: relative;
   top: 83px;
   color: white;
   font-size: 40px;
 }
 .place5 {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
   grid-column: 1 / 2;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   height: 65px;
   position: relative;
   top: 75px;
