--- a/public/styles/mini.css
+++ b/public/styles/mini.css
@@ -236,6 +236,9 @@
     .contact_us {
       left: 25%;
     }
+    .answer {
+      font-size: 14px;
+    }
 
 }
 @media (min-width: 600px) and (max-width: 800px) {
