--- a/public/styles/main2.css
+++ b/public/styles/main2.css
@@ -174,7 +174,7 @@
     top: -180px;
   }
   .more {
-    top: 1585px;
+    top: 1635px;
     left: 2%;
     z-index: 1;
     -webkit-box-shadow: 0px 8px 11px #2ECCFA;
@@ -220,13 +220,14 @@
     top: 67px !important;
   }
   #send {
-    left: 52%;
+    left: 50%;
     top: 60px;
   }
   #right {
-    top: 16px;
-    left: -22px;
+    top: 26px;
+    left: -15px;
     width: 71%;
+    height: 30px;
   }
 }
 
